Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11532

Explorer's taskbar toolbar doesn't receive NcHitTest messages

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 0.4.3
    • Shell
    • None

    Description

      Explorer's taskbar toolbar doesn't receive NcHitTest messages.
      More precisely, the alternate message map in the class CTaskSwitchWnd that is destinated for its m_TaskBar is never used since revision 65274. As a result no nchittest messages are transmitted to the taskbar, leading to the non-trasmission of those messages back to the main Shell_TaskWnd window. This results in the impossibility of dragging the task bar to different parts of the screen.

      Cc gigaherz and smiley.

      Attachments

        Issue Links

          Activity

            People

              Smiley Giannis Adamopoulos
              hbelusca hbelusca
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: