[EXPLORER] - Fix subclassing the tasks toolbar which was broken in r65274. CORE-11532

svn path=/trunk/; revision=72111